# MurineCyto-Det

./: .gitignore  FasterRCNN_Cell  FasterRCNN_Cell.ipynb  Labelbox_export.ipynb  PSPNET_Cell_Analysis.ipynb  README.md  UNet_Lightning.ipynb  Untitled Diagram.drawio  cellpose_classification.py  cellpose_seg.py  download_data.py  main.py  od.py  paper2025-benchmarkdataset-seg-models.ipynb  pyproject.toml  reports.py  seg.py  seg_models.ipynb  seg_v1_torch.py  train_seg_lightning.py  unet-cell.ipynb
.virtual_documents/notebooks/: murincells_segmentation_multiclass.ipynb
Figures/: Trello.drawio  Untitled Diagram.drawio
dataloader/: __init__.py  dataloaders.py
logs/unet_model/: events.out.tfevents.1735050244.LeXuanThang.459486.0  events.out.tfevents.1735054100.LeXuanThang.459486.3
notebooks/: data_masks_to_bboxes.ipynb  murincells_segmentation_multiclass.ipynb  report.ipynb  seg_models.ipynb  segmentation_multiclass.ipynb
notebooks/.ipynb_checkpoints/: murincells_segmentation_multiclass-checkpoint.ipynb
notebooks/notebooks/: FasterRCNN.ipynb  YOLOv8.ipynb  murincells-segmentation-multiclass.ipynb
utilities/: export_labelbox.py  export_labelbox2grayscale.py  extract_ndpi2png.ipynb  helpers.py  masks2bboxes.py  openslidepython.ipynb  test.py  tools.py
utils/: data.py  det_helpers.py  helpers.py  plot_segmentation.py
utils/postprocessing/: helpers.py
utils/preprocessing/: export_labelbox.py  export_labelbox2grayscale.py  masks2bboxes.py
